--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "scripts": {
     "start": "concurrently \"npm run start:backend\" \"npm run start:frontend\"",
     "start:frontend": "cd frontend-maid-pro && npm start",
-    "start:backend": "cd backend-maid-pro && npm start"
+    "start:backend": "cd backend-maid-pro && npm start",
+    "start:frontend:y": "cd frontend-maid-pro && yarn start",
+    "start:backend:y": "cd backend-maid-pro && yarn start"
   }
 }
