--- a/frontend-maid-pro/package.json
+++ b/frontend-maid-pro/package.json
@@ -9,6 +9,7 @@
     "antd": "^3.26.6",
     "axios": "^0.19.1",
     "customize-cra": "^0.9.1",
+    "jwt-decode": "^2.2.0",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "prop-types": "^15.7.2",
