--- a/frontend-maid-pro/package.json
+++ b/frontend-maid-pro/package.json
@@ -50,6 +50,8 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "jest": "^24.9.0",
-    "jest-enzyme": "^7.1.2"
+    "jest-enzyme": "^7.1.2",
+    "jsonwebtoken": "^8.5.1",
+    "moxios": "^0.4.0"
   }
 }
