Added yarn.lock into .gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -261,7 +261,11 @@ sketch
 .idea/**/markdown-navigator.xml
 .idea/**/markdown-navigator/
 
-##
+## npm/yarn lock file
 package-lock.json
 backend-maid-pro/package-lock.json
 frontend-maid-pro/package-lock.json
+yarn.lock
+backend-maid-pro/yarn.lock
+frontend-maid-pro/yarn.lock
+
