--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Sequelize configuration
-**/backend-maid-pro/config/config.json
+*/config.json
+config.json
 
 # User-specific stuff
 .idea/**/workspace.xml
