--- a/backend-maid-pro/config/config.json
+++ b/backend-maid-pro/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": "12345678",
+    "password": "Mark4869",
     "database": "cc4_maid_pro",
     "host": "127.0.0.1",
     "dialect": "mysql",
