Add buiding and services seed & Add Seeding cli for automate seeder

--- a/backend-maid-pro/package.json
+++ b/backend-maid-pro/package.json
@@ -6,8 +6,9 @@
   "license": "MIT",
   "scripts": {
     "start": "nodemon",
-    "seed": "npx sequelize db:seed:all",
-    "seed:y": "yarn sequelize db:seed:all"
+    "start:server": "nodemon index.js",
+    "seed": "$PWD/seeding.sh npx",
+    "seed:y": "$PWD/seeding.sh yarn"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
