--- a/backend-maid-pro/package.json
+++ b/backend-maid-pro/package.json
@@ -18,6 +18,7 @@
     "express-fileupload": "^1.1.6",
     "jest": "^24.9.0",
     "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.9.1",
     "mysql2": "^2.0.1",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
