--- a/backend-maid-pro/config/config.json
+++ b/backend-maid-pro/config/config.json
@@ -18,9 +18,9 @@
   },
   "production": {
     "username": "root",
-    "password": null,
-    "database": "database_production",
-    "host": "127.0.0.1",
+    "password": "12345678",
+    "database": "cc4_maid_pro",
+    "host": "mysql",
     "dialect": "mysql",
     "operatorsAliases": false
   }
