--- a/frontend-maid-pro/package.json
+++ b/frontend-maid-pro/package.json
@@ -25,7 +25,7 @@
     "styled-components": "^4.4.1"
   },
   "scripts": {
-    "start": "set PORT=8080 && react-app-rewired start",
+    "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-scripts eject"
