--- a/backend-maid-pro/config/config.json
+++ b/backend-maid-pro/config/config.json
@@ -1,9 +1,9 @@
 {
   "development": {
     "username": "root",
-    "password": "12345678",
+    "password": "develop",
     "database": "cc4_maid_pro",
-    "host": "127.0.0.1",
+    "host": "mysql-db",
     "dialect": "mysql",
     "salt_length": 12,
     "timezone": "Asia/Bangkok"
