--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,37 +1,37 @@
 version: "2"
 services:
-  mysql:
-    container_name: mysql_db
+  mysql-db:
+    container_name: mysql
     image: mysql:8.0
-    #command:
-      #- "--default-authentication-plugin=mysql_native_password"
+    command:
+      - "--default-authentication-plugin=mysql_native_password"
       #- "mysql -u root -p tigersut < createDB.sql"
     environment:
       MYSQL_USER: root
-      MYSQL_PASSWORD: "12345678"
-      MYSQL_ROOT_PASSWORD: "12345678"
+      MYSQL_PASSWORD: develop 
+      MYSQL_ROOT_PASSWORD: develop 
       MYSQL_DATABASE: cc4_maid_pro
     ports:
       - "3306:3306"
-    expose:
-      - "3306"
-    volumes:
-      - /var/lib/mysql
+    #expose:
+    #  - "3306"
+    #volumes:
+    #  - /var/lib/mysql
+    restart: always
     networks:
       - bridges
   server:
     build:
       context: ./backend-maid-pro
     command: node index.js
-    environment:
-      NODE_ENV: production
+    restart: always
     volumes:
-      - ./backend-maid-pro:/usr/src/app:delegated
-      - ./backend-maid-pro/package.json:/usr/src/package.json
+      - ./backend-maid-pro:/opt/app:delegated
+      - ./backend-maid-pro/package.json:/opt/package.json
     depends_on:
-      - mysql
+      - mysql-db
     ports:
-      - "8080:8080"
+      - "8080:3333"
     networks:
       - bridges
   client:
@@ -43,7 +43,7 @@ services:
       - /usr/app/node_modules
     depends_on:
       - server
-      - mysql
+      - mysql-db
     ports:
       - "3000:3000"
 
